infra/k8s/client-srv.yaml
apiVersion: v1
kind: Service
metadata:
  name: client-srv
  namespace: blog-app
spec:
  selector:
    app: client
  ports:
  - name: client
    protocol: TCP
    port: 3000
    targetPort: 3000
