infra/k8s/event-bus-srv.yaml
apiVersion: v1
kind: Service
metadata:
  name: event-bus-srv
spec:
  selector:
    app: event-bus
  ports:
  - name: event-bus
    protocol: TCP
    port: 4005
    targetPort: 4005
