infra/k8s/ingress-srv.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-srv
  namespace: blog-app
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  ingressClassName: nginx
  rules:
  - host: kubevpro.basquiat.app
    http:
      paths:
      - path: /posts/(.+)/comments
        pathType: ImplementationSpecific
        backend:
          service:
            name: comments-srv
            port:
              number: 4001
      - path: /posts/create
        pathType: Exact
        backend:
          service:
            name: posts-srv
            port:
              number: 4000
      - path: /posts
        pathType: Exact
        backend:
          service:
            name: query-srv
            port:
              number: 4002
      - path: /
        pathType: Prefix
        backend:
          service:
            name: client-srv
            port:
              number: 3000
